# robsBlobs

./: .gitignore  pyproject.toml  requirements.txt
robsBlobs/: G0_brilliance.py  __init__.py  alices_damn_monitor.py  atd95.py  atd95_test.py  brightness_ranking.py  cie_monitor_helpers.py  cie_standard.py  dkl.py  dkl_setup.py  guth_vector.py  hsv.py  hue_angles.py  hunt.py  hunt_test.py  img_stats.py  infamous_lab.py  jazzy.py  lch.py  lms.py  macadam.py  matlab.py  maxRGB_revolution.py  monitor.py  monitor_fitting.py  nayatani_insanity.py  plotting.py  radiance.py  rgb.py  spectra.py  sumrgb.py  uv_space.py
robsblobs/: G0_brilliance.py  __init__.py  atd95.py  brightness_ranking.py  cie_monitor_helpers.py  cmfs.py  diff_eqns.py  dkl.py  dkl_setup.py  fairchildL.py  funny_dude_discovers_maxRGB_in_adobe.py  guth_vector.py  hsl.py  hsv.py  hue_angles.py  illuminants.py  img_stats.py  itu_rec_bt2124.py  jingHSP.py  lms.py  macadam.py  mb_space.py  monitor.py  monitor_fitting.py  nayatani_insanity.py  nayatani_test.py  radiance.py  rgb.py  spectra.py  strobe_export.py  svf.py  uv_space.py  ware_cowan.py
tests/: atd95_test.py  ciede2000_test.py  hunt_test.py  nayatani_test.py
